refactor: harden websocket backend